--- a/geocities/src/main/resources/application.properties
+++ b/geocities/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-# possible values 'BFS' or 'DFS' otherwise DFS will be used as default.
+# possible values 'BFS' or 'DFS' otherwise BFS will be used as default.
 geocities.graph.algorithm=DFS
 geocities.graph.file=/cities.txt
